Remove unsupported jvm options, fixes JBIDE-28180 (#2039)
Signed-off-by: Ondrej Dockal <odockal@redhat.com>