@@ -14,7 +14,6 @@
 
 	<properties>
 		<surefire.timeout>7200</surefire.timeout>
-		<memoryOptions2>-XX:MaxPermSize=384m</memoryOptions2>
 		<swt.bot.test.record.screencast>false</swt.bot.test.record.screencast>
 		<reddeer.close.shells>true</reddeer.close.shells>
 		<reddeer.close.welcome.screen>true</reddeer.close.welcome.screen>
@@ -76,8 +75,7 @@
 				</os>
 			</activation>
 			<properties>
-				<memoryOptions1>-Xms384m -Xmx768m -XX:PermSize=192m</memoryOptions1>
-		        	<memoryOptions2>-XX:MaxPermSize=384m</memoryOptions2>
+				<memoryOptions1>-Xms384m -Xmx768m</memoryOptions1>
 			</properties>
 		</profile>
 		<profile>
